week-3/styles.css
ul li:nth-child(3),
ul li:nth-child(4) {
    color: red;
}

ol li:nth-child(2),
ol li:nth-child(4) {
        font-size: 24px;
}

div {
    width: 100px;
    height: 100px;
    background-color: red;
    margin-bottom: 12px;
}

div p {
    margin: 0;
}

div p:first-child {
    font-style: italic;
}

div:nth-of-type(2) p {
    color: white;
}

div:nth-of-type(2) p:first-child {
    color: black;
}

button {
    background-color: blanchedalmond;
    border: 1px solid black;
    border-radius: 15px;
}

button:hover {
    background-color: blue;
    color: white;
}

button:active {
    width: 200px;
    height: 150px;
    border-radius: 0;
}

